# coauthors2tex

./: LICENSE  README.md  artigau_sossisse_2026_coauthors.tex  artigau_wd_2025_coauthors.tex  coauthors_nirps.py  general.py  pyproject.toml  python  setup.cfg
coauthors_to_tex/: __init__.py  constants.py  general.py  xmatch_authors.py
