[metadata]
name = coauthors_to_tex
version = attr: coauthors_to_tex.constants.__version__
description = Quickly generate an author list from some linked googlespread sheets
long_description = file: README.md
author = Etienne Artigau, Neil Cook
author_email = etienne.artigau@umontreal.ca
url = https://github.com/njcuk9999/coauthors2tex
license = MIT License

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
    astropy
    wget

python_requires = >=3.8


[options.entry_points]
console_scripts =
    coauthors2tex = coauthors_to_tex.general:main
